# tableauToPowerBI

./: .gitignore  CLAUDE.md  Makefile  README.md  config.yaml.example  final.md  final_1.md  pyproject.toml  pytest.ini  review.md
docs/: architecture.md
docs/superpowers/plans/: 2026-04-23-plan-1-scaffolding-infra.md  2026-04-24-plan-2-extract-canonicalize.md  2026-04-26-plan-3-calc-translation-visual-mapping.md  2026-04-29-plan-4-layout-tmdl-pbir-emission.md  2026-05-01-plan-5-package-validate-desktop-gate.md  2026-05-02-plan-6-pbir-schema-fixes.md  2026-05-02-plan-7-tmdl-column-emission.md  2026-05-02-plan-8-visual-emission-fix.md
schemas/: ir-v1.0.0.schema.json  ir-v1.1.0.schema.json
src/tableau2pbir/: __init__.py  cli.py  pipeline.py
src/tableau2pbir/classify/: calc_kind.py  (+2 more)
tests/: conftest.py
tests/contract/: test_ir_schema.py  test_stage2_ir_contract.py  test_stage3_calcs_contract.py  test_stage4_visual_contract.py  test_stage5_layout_contract.py  test_stage6_tmdl_contract.py  test_stage7_pbir_contract.py  test_stage8_package_contract.py
tests/desktop_open/: README.md
tests/golden/: README.md  test_real_actions.py  test_real_calc_kind.py  test_real_connector_tier.py  test_real_dashboards.py  test_real_stage1.py  test_real_stage2.py  test_real_tier_c.py
tests/integration/: test_empty_pipeline_end_to_end.py  test_real_workbooks_e2e.py  test_stage1_stage2_integration.py  test_stage3_stage4_integration.py  test_stage5_6_7_integration.py
tests/unit/: test_cli.py  test_pipeline_contract.py  test_pipeline_runner.py  test_pytest_config.py
(+217 files in other folders)
